--- a/package.json
+++ b/package.json
@@ -13,21 +13,27 @@
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.10",
     "axios": "^0.19.2",
+    "expo-blur": "^8.1.2",
     "formik": "^2.1.4",
+    "moment": "^2.27.0",
     "qs": "^6.9.4",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-collapsible": "^1.5.2",
+    "react-native-dropdown-picker": "^3.0.5",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.5",
     "react-native-screens": "^2.8.0",
     "react-native-segmented-control-tab": "^3.4.1",
+    "react-native-slider": "^0.11.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.9",
     "react-navigation-stack": "^2.7.0",
     "react-navigation-tabs": "^2.8.13",
     "react-redux": "^7.2.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.20",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
